# project-Cole-Abbott

./: README.md
cmakeTest/: hellotest.cpp
cppTest/: main  main.cpp
cppTest/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
cursor/: cursor  cursor.cpp
inClassExamples/: thread  thread.cpp
inClassExamples/cmakeTest/: CMakeLists.txt
inClassExamples/cppTest/main.dSYM/Contents/Resources/DWARF/: main
openGL/: main
openGL/examples/: camera.cpp  rectangleEBO.cpp  shaderTutorial.cpp  texturesTutorial.cpp  triangle.cpp
openGL/examples/lightingMaps/: camera.h  main.cpp
openGL/examples/lightingMaps/shaders/: fragmentShader.glsl  vertexShader.glsl
openGL/examples/materials/: main.cpp
openGL/examples/materials/shaders/: fragmentShader.glsl  vertexShader.glsl
openGL/include/glad/: glad.h
openGL/main.dSYM/Contents/Resources/DWARF/: main
openGL/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
openGL/src/: glad.c  main.cpp  shader.h
openGL/src/core/: game.cpp  game.h  window.cpp  window.h
openGL/src/entities/: camera.h  player.cpp  player.h
openGL/src/graphics/: renderer.cpp  renderer.h  shader.h  vertices.h  verticies.cpp
openGL/src/shaders/: blockFragShader.glsl  blockVertexShader.glsl  fragmentShader.glsl  vertexShader.glsl
openGL/src/textures/: atlas.xcf
openGL/src/utils/: utils.h
openGL/src/world/: blockTypes.h  chunk.cpp  chunk.h  perlin.csv  perlin1D.csv  plot.ipynb  randInt  terrainGeneration.cpp  terrainGeneration.h  world.cpp  world.h
openGL/src/world/testing/: data.csv  interpolateDemo.csv  noiseDemo.csv  perlin1D.csv
practice/practice 0/: AirlineTicket  AirlineTicket.cpp  array  array.cpp  socialMedia.txt
testProject/: CMakeLists.txt
testProject/src/: source1.cpp
testProject/src/include/first_project/: header1.h
testProject/tests/: CMakeLists.txt
testProject/tests/unit/: test_feature1.cpp
